--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Wesley Feitosa",
   "license": "ISC",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
