--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "portal de noticias baseado no curso de node",
   "main": "noticias.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Wesley Feitosa",
   "license": "ISC",
